; ModuleID = '/home/carl/AnghaBench/git/extr_diffcore-pickaxe.c_diffgrep_consume.c'
source_filename = "/home/carl/AnghaBench/git/extr_diffcore-pickaxe.c_diffgrep_consume.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.diffgrep_cb = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*, i64)* @diffgrep_consume to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @diffgrep_consume(i8* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.diffgrep_cb*, align 8
  %8 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = bitcast i8* %9 to %struct.diffgrep_cb*
  store %struct.diffgrep_cb* %10, %struct.diffgrep_cb** %7, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = getelementptr inbounds i8, i8* %11, i64 0
  %13 = load i8, i8* %12, align 1
  %14 = sext i8 %13 to i32
  %15 = icmp ne i32 %14, 43
  br i1 %15, label %16, label %23

16:                                               ; preds = %3
  %17 = load i8*, i8** %5, align 8
  %18 = getelementptr inbounds i8, i8* %17, i64 0
  %19 = load i8, i8* %18, align 1
  %20 = sext i8 %19 to i32
  %21 = icmp ne i32 %20, 45
  br i1 %21, label %22, label %23

22:                                               ; preds = %16
  br label %43

23:                                               ; preds = %16, %3
  %24 = load %struct.diffgrep_cb*, %struct.diffgrep_cb** %7, align 8
  %25 = getelementptr inbounds %struct.diffgrep_cb, %struct.diffgrep_cb* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %29

28:                                               ; preds = %23
  br label %43

29:                                               ; preds = %23
  %30 = load %struct.diffgrep_cb*, %struct.diffgrep_cb** %7, align 8
  %31 = getelementptr inbounds %struct.diffgrep_cb, %struct.diffgrep_cb* %30, i32 0, i32 1
  %32 = load i32, i32* %31, align 4
  %33 = load i8*, i8** %5, align 8
  %34 = getelementptr inbounds i8, i8* %33, i64 1
  %35 = load i64, i64* %6, align 8
  %36 = sub i64 %35, 1
  %37 = call i32 @regexec_buf(i32 %32, i8* %34, i64 %36, i32 1, i32* %8, i32 0)
  %38 = icmp ne i32 %37, 0
  %39 = xor i1 %38, true
  %40 = zext i1 %39 to i32
  %41 = load %struct.diffgrep_cb*, %struct.diffgrep_cb** %7, align 8
  %42 = getelementptr inbounds %struct.diffgrep_cb, %struct.diffgrep_cb* %41, i32 0, i32 0
  store i32 %40, i32* %42, align 4
  br label %43

43:                                               ; preds = %29, %28, %22
  ret void
}

declare dso_local i32 @regexec_buf(i32, i8*, i64, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
